# arrow-adbc

c/driver/bigquery/: CMakeLists.txt  connection.cc  connection.h  database.cc  database.h  readrowsiterator.cc  readrowsiterator.h  statement.cc  statement.h
go/adbc/: go.mod  go.sum
go/adbc/driver/clickhouse/: clickhouse_database.go  connection.go  driver.go  record_reader.go  statement.go
go/adbc/driver/snowflake/: connection.go
